--- a/scripts/environment.js.2
+++ b/scripts/environment.js.2
@@ -1,7 +1,5 @@
 'use strict'
 
-/* eslint-disable space-before-function-paren */
-
 import inquirer from 'inquirer'
 import signale from 'signale'
 import * as fs from 'fs'
@@ -22,8 +20,8 @@ async function promptForEnv() {
       type: 'list',
       name: 'environment',
       message: 'Which environment would you like to use?',
-      choices: getDirectories('environments/')
-    }
+      choices: getDirectories('environments/'),
+    },
   ])
   const env = response.environment
   const elements = fs.readdirSync('environments/' + env + '/')
